--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 # Node Modules
-node_modules/
+node_modules
+dist
+dist-ssr
+*.local
 
 # Build Files
 build/
 
 # Design Files Cache
 *.blend1
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
