Update dependencies & build & development scripts in package.json

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "webgl-car-config",
   "version": "1.0.0",
   "description": "WebGL based car configurator using threeJS",
-  "main": "app.js",
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack",
-    "build-css": "sass src/sass/style.scss src/static/css/style.css --style compressed"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -24,10 +23,8 @@
     "three": "^0.161.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^9.1.0",
     "sass": "^1.71.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1"
+    "typescript": "^5.3.3",
+    "vite": "5.1.4"
   }
 }
